# point_cloud_segmentation

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  dependencies.rosinstall  package.xml
.github/workflows/: main.yml
gh_pages/: index.rst
gh_pages/_source/: pcs_ros.rst
include/point_cloud_segmentation/: hsv_thresholding.h  pc_masker.h
launch/: demo.launch
pcs_detection/: CMakeLists.txt  README.md  package.xml  setup.py
pcs_detection/cmake/: pcs_detection-config.cmake.in
pcs_detection/include/pcs_detection/: hsv_thresholding.h  point_cloud_annotator.h  utils.h
pcs_detection/scripts/: example_weights.py  fcn8_inference.py  fcn8_train.py  histogram_backprojection_example.py  histogram_training.py  masking_inference.py  training_config.json
pcs_detection/scripts/data/: fcn8_train.py  fcn8_validate.py  training_config.json
pcs_detection/scripts/data/aluminum_3/: training_labels.xml  validation_labels.xml
pcs_detection/scripts/data/example_dataset_1/: training_labels.xml  validation_labels.xml
pcs_detection/scripts/data/example_dataset_2/: training_labels.xml  validation_labels.xml
pcs_detection/scripts/data/example_dataset_2/validation/: .gitignore
pcs_detection/scripts/data/weights/: .gitignore
pcs_detection/scripts/data/weights/fcn8_COMBINED_19_10_10_173416/: full_config.json  inference_config.json
pcs_detection/scripts/data/weights/fcn8_STACKED_19_10_10_173601/: full_config.json  inference_config.json
pcs_detection/scripts/data/weights/using_negatives_fcn8_GREY_19_10_10_101037/: config.json  full_config.json  inference_config.json
pcs_detection/src/pcs_detection/: histogram_backprojection.py  point_cloud_annotator.cpp
pcs_detection/src_python/: CMakeLists.txt  setup.py.in
pcs_detection/src_python/pcs_detection/: data_loader.py  inference.py  preprocess.py  process.py  utils.py
pcs_detection/src_python/pcs_detection/models/: fcn8_model.py  fcn8_reduced.py  fcn8_transfer.py  histogram_backprojection.py
pcs_detection/test/: CMakeLists.txt  point_cloud_annotator_unit.cpp  utils_unit.cpp
pcs_msgs/: CMakeLists.txt  package.xml
pcs_msgs/action/: ApplyOctomapMeshMask.action
pcs_msgs/srv/: ImageProcessing.srv
pcs_ros/: CMakeLists.txt  package.xml  setup.py
pcs_ros/config/: demo.rviz
pcs_ros/include/pcs_ros/: utils.h
pcs_ros/launch/: demo.launch  extract_all_bags.sh  extract_images_from_bag.launch
pcs_ros/src/: fcn8_node  histogram_backprojection_node  hsv_thresholding_node.cpp  image_channel_splitter_node.cpp  image_extractor_node.cpp  octomap_mesh_mask_node.cpp  pc_masker_node.cpp  point_cloud_annotator_node.cpp  point_cloud_xyzi_to_xyzrgb_node.cpp
pcs_ros/src/pcs_ros/: pc_masker.cpp
pcs_ros/src/utility_nodes/: point_cloud_passthrough_node.cpp
pcs_ros2/: CMakeLists.txt  package.xml
pcs_ros2/include/pcs_ros2/: octomap_mesh_mask_node.h  point_cloud_annotator_node.h
pcs_ros2/src/: fcn8_node  octomap_mesh_mask_node.cpp  point_cloud_annotator_node.cpp
pcs_scan_integration/: CMakeLists.txt  README.md  package.xml
pcs_scan_integration/cmake/: pcs_scan_integration-config.cmake.in
pcs_scan_integration/include/pcs_scan_integration/: octomap_mesh_masking.h
pcs_scan_integration/src/pcs_scan_integration/: octomap_mesh_masking.cpp
pcs_scan_integration/test/: CMakeLists.txt  octomap_mesh_masking_unit.cpp
src/: pc_masker_node.cpp
src/point_cloud_segmentation/: pc_masker.cpp
