<?xml version="1.0"?>
<package format="2">
  <name>pcs_detection</name>
  <version>0.0.0</version>
  <description>The pcs_detection package</description>

  <maintainer email="matthew.powelson@swri.org">Matthew Powelson</maintainer>

  <license>Apache 2.0</license>


  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>python-numpy</exec_depend>
  <exec_depend>python-opencv</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
