<?xml version="1.0"?>
<package format="2">
  <name>pcs_detection</name>
  <version>0.0.0</version>
  <description>The pcs_detection package</description>

  <maintainer email="matthew.powelson@swri.org">Matthew Powelson</maintainer>

  <license>Apache 2.0</license>

  <build_depend>cmake_common_scripts</build_depend>

  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <depend>libconsole-bridge-dev</depend>

  <test_depend>tesseract_common</test_depend>
  <test_depend>gtest</test_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
