<?xml version="1.0"?>
<package format="2">
  <name>pcs_msgs</name>
  <version>0.0.0</version>
  <description>The pcs_msgs package</description>

  <maintainer email="matthew.powelson@swri.org">Matthew Powelson</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

</package>
