<?xml version="1.0"?>
<package format="3">
  <name>pcs_msgs</name>
  <version>0.1.0</version>
  <description>The pcs_msgs package</description>

  <maintainer email="matthew.powelson@swri.org">Matthew Powelson</maintainer>

  <license>Apache 2.0</license>

  <!-- ROS 1 Depends -->
  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <depend condition="$ROS_VERSION == 1">message_generation</depend>
  <depend condition="$ROS_VERSION == 1">message_runtime</depend>
  <depend condition="$ROS_VERSION == 1">actionlib_msgs</depend>

  <!-- ROS 2 Depends -->
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">rosidl_default_generators</buildtool_depend>
  <member_of_group condition="$ROS_VERSION == 2">rosidl_interface_packages</member_of_group>

  <!-- Depends -->
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type condition="$ROS_VERSION == 1">catkin</build_type>
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
  </export>
</package>
