<?xml version="1.0"?>
<package format="2">
  <name>pcs_ros</name>
  <version>0.0.1</version>
  <description>The point_cloud_segmentation package.</description>

  <maintainer email="matthew.powelson@swri.edu">Matthew Powelson</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>pcs_detection</depend>
  <depend>pcs_msgs</depend>
  <depend>message_runtime</depend>

  <exec_depend>opencv-python</exec_depend>
  <exec_depend>rospy</exec_depend>

</package>
