<?xml version="1.0"?>
<package format="2">
  <name>pcs_scan_integration</name>
  <version>0.0.0</version>
  <description>The pcs_scan_integration package</description>

  <maintainer email="matthew.powelson@swri.org">Matthew Powelson</maintainer>

  <license>Apache 2.0</license>

  <depend>tesseract_collision</depend>
  <depend>libconsole-bridge-dev</depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
