find_package(GTest REQUIRED)
find_package(tesseract_support REQUIRED)

add_executable(${PROJECT_NAME}_point_cloud_annotator_unit point_cloud_annotator_unit.cpp)
target_link_libraries(${PROJECT_NAME}_point_cloud_annotator_unit tesseract::tesseract_support ${GTEST_BOTH_LIBRARIES} ${PROJECT_NAME}_point_cloud_annotator)
target_compile_options(${PROJECT_NAME}_point_cloud_annotator_unit PRIVATE -Wsuggest-override -Wconversion -Wsign-conversion)
if(CXX_FEATURE_FOUND EQUAL "-1")
    target_compile_options(${PROJECT_NAME}_point_cloud_annotator_unit PRIVATE -std=c++11)
else()
    target_compile_features(${PROJECT_NAME}_point_cloud_annotator_unit PRIVATE cxx_std_11)
endif()
if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
    target_compile_options(${PROJECT_NAME}_point_cloud_annotator_unit PRIVATE -mno-avx)
  else()
    message(WARNING "Non-GNU compiler detected. If using AVX instructions, Eigen alignment issues may result.")
  endif()
target_include_directories(${PROJECT_NAME}_point_cloud_annotator_unit PRIVATE ${GTEST_INCLUDE_DIRS})
if(${CMAKE_VERSION} VERSION_LESS "3.10.0")
    gtest_add_tests(${PROJECT_NAME}_point_cloud_annotator_unit "" AUTO)
else()
    gtest_discover_tests(${PROJECT_NAME}_point_cloud_annotator_unit)
endif()
add_dependencies(${PROJECT_NAME}_point_cloud_annotator_unit ${PACKAGE_LIBRARIES})
target_compile_definitions(${PROJECT_NAME}_point_cloud_annotator_unit PRIVATE DATA_DIR="${CMAKE_SOURCE_DIR}/test")
add_dependencies(run_tests ${PROJECT_NAME}_point_cloud_annotator_unit)

